# archive-password-finder

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml
app/src/: app.rs  font.rs  main.rs
app/src/ui/: mod.rs
core/benches/: password_generator.rs
core/src/: password_reader.rs
core/src/pdf/: pdf.rs
core/src/rar/: mod.rs
core/src/zip/: zip_utils.rs
file-password-finder/: Cargo.toml
file-password-finder/src/: args.rs  cli_error.rs  main.rs
password_crack/: Cargo.toml
password_crack/benches/: password_generator.rs
password_crack/src/: errors.rs  lib.rs  password_finder.rs  password_gen.rs  password_reader.rs  password_worker.rs
password_crack/src/pdf/: pdf.rs
password_crack/src/rar/: rar.rs
password_crack/src/seven_z/: seven_z.rs
password_crack/src/zip/: zip.rs  zip_utils.rs
src/: args.rs  charsets.rs  finder_errors.rs  main.rs  password_finder.rs  password_gen.rs  password_gen1.rs  password_reader.rs  password_worker.rs  progress_bar.rs
src/pdf/: mod.rs
src/seven_z/: mod.rs  seven_z.rs
src/zip/: mod.rs  zip.rs  zip_a.rs  zip_utils.rs
