[package]
name = "zip-password-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 性能比官方的强，所以选择它 
thiserror = "1.0.37"
crossbeam-channel = "0.5.6"
indicatif = { version = "*", features = ["rayon"] }
zip = "0.6.2"
clap = { version = "4.0.14", features = ["cargo"] }
rayon = "1.5.3"
permutator = "0.4.3"

[profile.release]
# opt-level = 'z'
# strip = true
# lto = true
# codegen-units = 1
# panic = "abort"
