[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.0"
rfd = "0.11.0"
password_crack = { path = "../password_crack" }
time = { version = "0.3.17" }
num_cpus = "1.15.0"

