[package]
name = "file-password-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
password_crack = { path = "../password_crack" }
clap = { version = "4.1.4", features = ["cargo"] }
itertools = "0.10.5"
thiserror = "1.0.38"
num_cpus = "1.15.0"
indicatif = { version = "0.17.3", features = [] }
crossbeam-channel = "0.5.6"
